# hero-mcp-server

./: .env.example  Dockerfile  README.md  claude_desktop_config.json  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/: authelia-config.md
examples/: authelia-oidc-client.yml  traefik-hero-mcp-oauth.yml
src/hero_mcp_server/: client.py  server.py
traefik/: hero-mcp-oauth.yml
